api_versions/v1.1.1/AI_AGENT_USAGE_GUIDE.md
# Laxmi-yantra Trading API v1.1.1 - AI Agent Usage Guide

**🎯 Purpose**: Complete guide for AI agents to optimally use the Laxmi-yantra Trading API v1.1.1
**📅 Release Date**: 2025-08-22
**🔄 Status**: Stable
**🤖 Optimized for**: AI Agents, Automated Trading, Algorithmic Systems



> **Disclaimer**: This guide is auto-generated by code for v1.1.1. While it aims to be accurate and up-to-date, parts may be outdated or incomplete. Use it to understand the overall structure, but always verify by calling the live endpoints. Before making decisions, validate behavior using small transactions on `strategy_name="test_strategy"` (buy and then immediately sell to flatten exposure).
>
> Endpoints, fields, and behaviors may differ between API versions. Always verify against live server responses for the most accurate information.

## Quick Navigation
- [🚀 Quick Start](#quick-start)
- [📋 Endpoints Reference](#endpoints-reference)  
- [🤖 AI Agent Examples](#ai-agent-examples)
- [⚠️ Error Handling](#error-handling)
- [💡 Best Practices](#best-practices)
- [🔧 Troubleshooting](#troubleshooting)
- [📊 Response Samples](#response-samples)


## 📋 Endpoints (Concise)

### Tools

### get_account_status
- **method**: POST
- **path**: /v1.1.1/tools/get_account_status
- **description**: Execute tool
- **params**: JSON body

```bash
curl -s -X POST http://127.0.0.1:8000/v1.1.1/tools/get_account_status -H 'Content-Type: application/json' -d '{}'
```

### buy_stock
- **method**: POST
- **path**: /v1.1.1/tools/buy_stock
- **description**: Place a buy order (defaults: strategy_name=test_strategy, order_type=market)
- **params**: ticker (string), quantity (number), strategy_name (string, optional), order_type (market|limit|stop|stop_limit, optional), price (number, required for limit/stop_limit)

```bash
curl -s -X POST http://127.0.0.1:8000/v1.1.1/tools/buy_stock \
  -H 'Content-Type: application/json' \
  -d '{"ticker":"AAPL","quantity":1,"strategy_name":"test_strategy","order_type":"market"}'
```

### sell_stock
- **method**: POST
- **path**: /v1.1.1/tools/sell_stock
- **description**: Place a sell order (use bracket/OTO for exits if wash-trade is blocked)
- **params**: ticker (string), quantity (number), strategy_name (string, optional), order_type (market|limit|stop|stop_limit, optional), price (number, required for limit/stop_limit)

```bash
curl -s -X POST http://127.0.0.1:8000/v1.1.1/tools/sell_stock \
  -H 'Content-Type: application/json' \
  -d '{"ticker":"AAPL","quantity":1,"strategy_name":"test_strategy","order_type":"market"}'
```

### execute_trade
- **method**: POST
- **path**: /v1.1.1/tools/execute_trade
- **description**: Advanced trade execution; accepts side alias (auto-normalized to action). Optional legs allowed.
- **params**: strategy_name (string, default test_strategy), ticker (string), side (buy|sell), quantity (number), order_type (market|limit|stop|stop_limit), price (number, required for limit/stop_limit), order_class (bracket|oto, optional), take_profit (object {limit_price}, optional), stop_loss (object {stop_price, limit_price}, optional), time_in_force (string, optional)

```bash
# Limit buy
curl -s -X POST http://127.0.0.1:8000/v1.1.1/tools/execute_trade \
  -H 'Content-Type: application/json' \
  -d '{"strategy_name":"test_strategy","ticker":"AAPL","side":"buy","quantity":1,"order_type":"limit","price":150.00}'

# Single-leg OTO sell (take-profit only)
curl -s -X POST http://127.0.0.1:8000/v1.1.1/tools/execute_trade \
  -H 'Content-Type: application/json' \
  -d '{"strategy_name":"test_strategy","ticker":"AAPL","side":"sell","quantity":1,"order_type":"market","order_class":"bracket","take_profit":{"limit_price":140.00}}'
```

### Resources

### account_info
- **method**: GET
- **path**: /v1.1.1/resources/account_info
- **description**: Data resource
- **params**: query string

```bash
curl -s -X GET http://127.0.0.1:8000/v1.1.1/resources/account_info
```

### portfolio_summary
- **method**: GET
- **path**: /v1.1.1/resources/portfolio_summary
- **description**: Data resource
- **params**: query string

```bash
curl -s -X GET http://127.0.0.1:8000/v1.1.1/resources/portfolio_summary
```

### strategy_summary
- **method**: GET
- **path**: /v1.1.1/resources/strategy_summary
- **description**: Data resource
- **params**: query string

```bash
curl -s -X GET http://127.0.0.1:8000/v1.1.1/resources/strategy_summary
```

### Analytics

### portfolio_summary
- **method**: GET
- **path**: /v1.1.1/analytics/performance/portfolio_summary
- **description**: Analytics endpoint
- **params**: query string

```bash
curl -s -X GET http://127.0.0.1:8000/v1.1.1/analytics/performance/portfolio_summary
```

### strategy_summary
- **method**: GET
- **path**: /v1.1.1/analytics/performance/strategy_summary
- **description**: Analytics endpoint
- **params**: query string

```bash
curl -s -X GET http://127.0.0.1:8000/v1.1.1/analytics/performance/strategy_summary
```

### kpis
- **method**: GET
- **path**: /v1.1.1/analytics/performance/kpis
- **description**: Analytics endpoint
- **params**: query string

```bash
curl -s -X GET http://127.0.0.1:8000/v1.1.1/analytics/performance/kpis
```

### top_movers
- **method**: GET
- **path**: /v1.1.1/analytics/performance/top_movers
- **description**: Analytics endpoint
- **params**: query string

```bash
curl -s -X GET http://127.0.0.1:8000/v1.1.1/analytics/performance/top_movers
```

### Guide

### get_agent_guide
- **method**: GET
- **path**: /v1.1.1/get_agent_guide
- **description**: Fetch the concise AI agent usage guide (Markdown)
- **params**: None

```bash
curl -s -X GET http://127.0.0.1:8000/v1.1.1/get_agent_guide
```


## 📊 Response Samples (Live)

### GET /v1.1.1/health
```json
{
  "status": "healthy",
  "version": "v1.1.1"
}
```

### GET /v1.1.1/analytics/performance/kpis
```json
{
  "kpis": {
    "portfolio_market_value": 16111.23011984,
    "net_unrealized_pnl": -146.96657467,
    "net_unrealized_pnl_pct": -0.9121995873488244,
    "annualized_unrealized_pnl_pct": -0.8969920512389052,
    "avg_position_unrealized_pnl_pct": -1.1453125,
    "sharpe_ratio_proxy": -1.135594690685579
  },
  "source": "analytics_portfolio_summary"
}
```


---

**🙏 Generated on 2025-08-23 01:01:38 - Blessed by Goddess Laxmi for Infinite Abundance**
